# 3DSoftware

./: CMakeLists.txt
dependencies/glad/: glad.h
shaders/: vertex.txt
src/: config.h  glad.c  main.cpp  triangle_mesh.cpp
